[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/Enemy/character_0022.png" type="Texture" id=1]
[ext_resource path="res://assets/Enemy/character_0021.png" type="Texture" id=2]
[ext_resource path="res://assets/Enemy/character_0023.png" type="Texture" id=3]
[ext_resource path="res://Enemy.gd" type="Script" id=4]
[ext_resource path="res://assets/Enemy/mutantdie.wav" type="AudioStream" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "Walking",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 10.3333, 9.25 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 9.66667, 0.666667 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 12, 8.5 )

[node name="Enemy" type="KinematicBody2D" groups=["enemies"]]
scale = Vector2( 3, 3 )
collision_layer = 4
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Walking"
frame = 1
playing = true

[node name="FloorDetector" type="RayCast2D" parent="."]
position = Vector2( 0, 11 )
cast_to = Vector2( 0, 5 )
collision_mask = 2

[node name="Enemybox" type="CollisionShape2D" parent="."]
position = Vector2( 4.76837e-07, 1.91666 )
shape = SubResource( 5 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, -8.66667 )
shape = SubResource( 4 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0, 2.5 )
shape = SubResource( 6 )

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_Hurtbox_body_entered"]
